# rocksdb-modularization

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/arena/src/: AllocTracker.cpp  AllocateBlock.cpp  Allocator.cpp  ApproximateMemoryUsage.cpp  Arena.cpp  CMakeLists.txt  CacheAllocationPtr.cpp  OptimizeBlockSize.cpp
libs/arena/tests/: CMakeLists.txt  base.cpp
libs/cache/src/: CMakeLists.txt  Cache.cpp
libs/cache/tests/: CMakeLists.txt  base.cpp
libs/cache_clock/src/: CMakeLists.txt  NewClockCache.cpp  clock_cache.cpp
libs/cache_clock/tests/: CMakeLists.txt  base.cpp
libs/cache_lru/doc/: README.m
libs/cache_lru/src/: CMakeLists.txt  LRUCache.cpp  LRUCacheOptions.cpp  LRUCacheShard.cpp  LRUHandle.cpp  LRUHandleTable.cpp  NewLRUCache.cpp  kDefaultToAdaptiveMutex.cpp
libs/cache_lru/tests/: CMakeLists.txt  base.cpp
libs/cache_sharded/src/: CMakeLists.txt  CacheShard.cpp  GetDefaultCacheShardBits.cpp  ShardedCache.cpp
libs/cache_sharded/tests/: CMakeLists.txt  base.cpp
libs/coding/src/: CMakeLists.txt  coding.cpp
libs/coding/tests/: CMakeLists.txt  base.cpp
libs/container/src/: AlignedBuffer.cpp  BinaryHeap.cpp  CMakeLists.txt  CoreLocalArray.cpp  HashMap.cpp  autovector.cpp
libs/container/tests/: CMakeLists.txt  base.cpp
libs/crc32/src/: CMakeLists.txt  crc32c.cpp
libs/crc32/tests/: CMakeLists.txt  base.cpp
libs/dbformat/doc/: README.md
libs/dbformat/src/: AppendInternalKey.cpp  AppendInternalKeyFooter.cpp  CMakeLists.txt  EntryType.cpp  ExtractInternalKeyFooter.cpp  ExtractUserKeyAndStripTimestamp.cpp  ExtractValueType.cpp  GetEntryType.cpp  InternalKeyComparator.cpp  InternalKeyEncodingLength.cpp  IsExtendedValueType.cpp  IsValueType.cpp  PackSequenceAndType.cpp  ParseInternalKey.cpp  ParsedInternalKey.cpp  StripTimestampFromUserKey.cpp  UnPackSequenceAndType.cpp  ValueType.cpp  kDisableGlobalSequenceNumber.cpp  kMaxSequenceNumber.cpp  kValueTypeForSeek.cpp  kValueTypeForSeekForPrev.cpp
libs/dbformat/tests/: CMakeLists.txt  base.cpp
libs/hash/src/: CMakeLists.txt  hash.cpp  murmurhash.cpp  xxhash.cpp
libs/hash/tests/: CMakeLists.txt  base.cpp  main.cpp
libs/io_abstract/src/: CMakeLists.txt  Directory.cpp  DirectoryWrapper.cpp  IOPriority.cpp  MemoryMappedFileBuffer.cpp  RandomAccessFile.cpp  RandomAccessFileWrapper.cpp  RandomRWFile.cpp  RandomRWFileWrapper.cpp  ReadRequest.cpp  SequentialFile.cpp  SequentialFileWrapper.cpp  WritableFile.cpp  WritableFileWrapper.cpp  WriteLifeTimeHint.cpp  kDefaultPageSize.cpp
libs/io_abstract/tests/: CMakeLists.txt  base.cpp
libs/iterator/src/: CMakeLists.txt  Cleanable.cpp  EmptyInternalIterator.cpp  EmptyIterator.cpp  InternalIterator.cpp  InternalIteratorBase.cpp  IterateResult.cpp  Iterator.cpp  IteratorWrapper.cpp  IteratorWrapperBase.cpp  NewEmptyIterator.cpp  NewErrorIterator.cpp  PinnableSlice.cpp
libs/iterator/tests/: CMakeLists.txt  base.cpp
libs/jemalloc/src/: CMakeLists.txt  JemallocAllocatorOptions.cpp  NewJemallocNodumpAllocator.cpp  jemalloc_helper.cpp  jemalloc_nodump_allocator.cpp
libs/jemalloc/tests/: CMakeLists.txt  base.cpp
libs/likely/src/: CMakeLists.txt  likely.cpp
libs/likely/tests/: CMakeLists.txt  base.cpp
libs/logger_abstract/src/: CMakeLists.txt  Debug.cpp  Error.cpp  Fatal.cpp  Header.cpp  Info.cpp  InfoLogLevel.cpp  Log.cpp  LogFlush.cpp  Logger.cpp  LoggerWrapper.cpp  ROCKSDB_PRINTF_FORMAT_ATTR.cpp  Warn.cpp
libs/logger_abstract/tests/: CMakeLists.txt  base.cpp
libs/memory_allocator/src/: CMakeLists.txt  CustomDeleter.cpp  JemallocAllocatorOptions.cpp  MemoryAllocator.cpp  NewJemallocNodumpAllocator.cpp
libs/memory_allocator/tests/: CMakeLists.txt  base.cpp
libs/memtable/: CMakeLists.txt
libs/memtable/doc/: README.md
libs/memtable/src/: BucketHeader.cpp  CMakeLists.txt  EncodeKey.cpp  HashLinkListRep.cpp  HashLinkListRepFactory.cpp  HashSkipListRepFactory.cpp  InlineSkipList.cpp  Key.cpp  KeyHandle.cpp  LookupKey.cpp  MemTableRep.cpp  MemTableRepFactory.cpp  MemtableSkipList.cpp  NewHashLinkListRepFactory.cpp  NewHashSkipListRepFactory.cpp  Node.cpp  Pointer.cpp  SkipList.cpp  SkipListBucketHeader.cpp  SkipListFactory.cpp  VectorRepFactory.cpp
libs/memtable/tests/: CMakeLists.txt  base.cpp
libs/mutex/src/: CMakeLists.txt  MutexLock.cpp  ReadLock.cpp  ReadUnlock.cpp  SpinMutex.cpp  WriteLock.cpp
libs/mutex/tests/: CMakeLists.txt  base.cpp
libs/numeric_limits/src/: CMakeLists.txt  numeric_limits.cpp
libs/numeric_limits/tests/: CMakeLists.txt  base.cpp
libs/port/src/: CMakeLists.txt  port.cpp  port_dirent.cpp  port_posix.cpp  stack_trace.cpp  sys_time.cpp  xpress.cpp
libs/port/tests/: CMakeLists.txt  base.cpp
libs/random/src/: CMakeLists.txt  Random.cpp  Random64.cpp
libs/random/tests/: CMakeLists.txt  base.cpp
libs/slice/src/: AppendEscapedStringTo.cpp  BytewiseComparator.cpp  BytewiseComparatorImpl.cpp  CMakeLists.txt  CappedPrefixTransform.cpp  Comparator.cpp  ConsumeDecimalNumber.cpp  EscapeString.cpp  ExtractUserKey.cpp  FixedPrefixTransform.cpp  NewCappedPrefixTransform.cpp  NewFixedPrefixTransform.cpp  NewNoopTransform.cpp  NoopTransform.cpp  ReverseBytewiseComparator.cpp  ReverseBytewiseComparatorImpl.cpp  Slice.cpp  SliceParts.cpp  SliceTransform.cpp
libs/slice/tests/: CMakeLists.txt  base.cpp
libs/sn/src/: CMakeLists.txt  SequenceNumber.cpp
libs/sn/tests/: CMakeLists.txt  base.cpp
libs/statistics/src/: CMakeLists.txt  CreateDBStatistics.cpp  Histogram.cpp  HistogramBucketMapper.cpp  HistogramData.cpp  HistogramImpl.cpp  HistogramStat.cpp  Histograms.cpp  HistogramsInternal.cpp  HistogramsNameMap.cpp  RecordInHistogram.cpp  RecordTick.cpp  RecordTimeToHistogram.cpp  SetTickerCount.cpp  Statistics.cpp  StatisticsImpl.cpp  StatsLevel.cpp  Tickers.cpp  TickersInternal.cpp  TickersNameMap.cpp
libs/statistics/tests/: CMakeLists.txt  base.cpp
libs/status/src/: CMakeLists.txt  Status.cpp
libs/status/tests/: CMakeLists.txt  base.cpp
libs/string/src/: AppendHumanBytes.cpp  AppendHumanMicros.cpp  AppendNumberTo.cpp  BytesToHumanString.cpp  CMakeLists.txt  EscapeChar.cpp  EscapeOptionString.cpp  (+22 more)
(+760 files in other folders)
